# proku_cpp

./: CMakeLists.txt  ex_assert.hpp
aufgabe1/: ex1.cpp
aufgabe10/: aufgabe10.cpp  makefile
aufgabe2/: ex2.cpp
aufgabe2b/: ex2b.cpp
aufgabe3ab/: ex3ab.cpp  ggt.cpp  ggt.hpp  kgv.cpp  kgv.hpp
aufgabe3c/: dbe.cpp  dbe.hpp  ex3c.cpp
aufgabe4/: ex4.cpp
aufgabe5a/: ptr4.cpp  ptr6.cpp
aufgabe5b/: ex5b.cpp
aufgabe5c/: ex5c.cpp
aufgabe5d/: ex5d.cpp
aufgabe6/: jpeg_io.cpp  makefile
aufgabe7/: makefile
aufgabe8/: aufgabe8.cpp  load_valgrind.sh
aufgabe9/: aufgabe-9  aufgabe9.cpp  image.hpp  jpeg_io.hpp
loesungen/aufgabe1/: aufgabe1a.cpp  aufgabe1b.cpp  aufgabe1c.cpp  makefile
loesungen/aufgabe10/: aufgabe10.cpp
loesungen/aufgabe11/: aufgabe-11  aufgabe11.cpp  canvas.hpp  example-1  example-2  example-3  example_2.cpp  example_3.cpp  shape.hpp  svg_writer.cpp  svg_writer.hpp
loesungen/aufgabe2/: aufgabe2a.cpp  aufgabe2b.cpp  makefile
loesungen/aufgabe3/: aufgabe3a.cpp  aufgabe3b.cpp  aufgabe3c.cpp  dbe.cpp  dbe.hpp  ggt.cpp  ggt.hpp  kgv.cpp  kgv.hpp  makefile
loesungen/aufgabe4/: aufgabe4.cpp  makefile
loesungen/aufgabe5/: aufgabe5c.cpp  makefile
loesungen/aufgabe5/aufgabe5a/: makefile  ptr1.cpp  ptr2.cpp  ptr3.cpp  ptr5.cpp
loesungen/aufgabe6/: aufgabe6.cpp  jpeg_io.cpp  parse.cpp  parse.hpp
loesungen/aufgabe7/: .nfs000000000636333b0000006b  aufgabe7.cpp  aufgabe7_orig.cpp
loesungen/aufgabe8/: aufgabe8.cpp
loesungen/aufgabe9/: image.cpp  makefile
loesungen/aufgabe_bonus_dinos/: aufgabe9a.cpp  aufgabe9b.cpp  aufgabe9c.cpp  aufgabe9d.cpp  aufgabe9e.cpp  camera.hpp  frame.hpp  jpeg_io.cpp  jpeg_io.hpp  makefile  point.hpp  rasterizer.hpp  test_helpers.hpp  triangle.hpp
loesungen/aufgabe_bonus_dinos/meshes/: acrocan.txt  brachio.txt  camara.txt  trice.txt
loesungen/aufgabe_bonus_pong/: example_1.cpp  example_2.cpp  keycodes.cpp  makefile  pong_classic.cpp  pong_power.cpp  render_window.cpp  render_window.hpp
loesungen/aufgabe_bonus_snakes/: base.hpp  console.cpp  console.hpp  example1.cpp  example2.cpp  example3.cpp  makefile  snake.cpp  snake.hpp  snakes_game.cpp  snakes_phase_1.cpp  snakes_phase_2.cpp  snakes_phase_3.cpp  timer.cpp  timer.hpp
loesungen/aufgabe_bonus_vier_gewinnt/: makefile  vier_gewinnt.cpp
start/aufgabe10/: aufgabe-10  aufgabe10.cpp
start/aufgabe11/: aufgabe-11  aufgabe11.cpp  canvas_window.cpp  canvas_window.hpp  example-1  example-2  example-3  example_1.cpp  makefile
start/aufgabe8/: .nfs000000000636334d0000006a  aufgabe8.cpp  makefile  script.txt
start/aufgabe9/: aufgabe9.cpp  image.cpp  image.hpp  makefile
